fixed content overflow

--- a/src/client/styles/common.less
+++ b/src/client/styles/common.less
@@ -138,6 +138,7 @@ body.post-modal .primary-modal {
 
 .ant-popover-inner-content {
   max-height: 55vh;
+  overflow: auto;
 }
 
 .ant-rate {
